--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html,body{
+    height:100%;
+    display: flex;
+    flex-direction: column;
 }
+
+body{
+    color:white;
+    background-color: #151e33;
+}
+
+#root{
+    height: 100%;
+}
+
+/* content */
+
+.dashboard{
+    margin-left: 200px;
+    min-height: 100vh;
+    padding: 30px 60px;
+}
+
+@media screen and (max-width: 576px) {
+
+    .dashboard{
+        margin-left: 0;
+    }
+  }
+  
+  
+
