--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,14 @@ body{
 .dashboard{
     margin-left: 200px;
     min-height: 100vh;
-    padding: 30px 60px;
+    padding: 30px 20px;
 }
 
 @media screen and (max-width: 576px) {
 
     .dashboard{
         margin-left: 0;
+        padding: 30px 0;
     }
   }
   
